--- a/style.css
+++ b/style.css
@@ -542,12 +542,23 @@ i {
 }
 
 .project-box {
-    background-color: #e6d12e;
-    width: 20%;
     position: relative;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+    width: 30%;
+    height: 250px;
+    background: transparent;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    box-shadow: 1px 8px 10px 2px var(--first-shadow);
+    overflow: hidden;
+    cursor: pointer;
+
 }
 
-/*
+
 .project-box>i {
     font-size: 50px;
     color: #8749f2;
@@ -555,15 +566,18 @@ i {
 
 }
 
+
 .project-box label {
     font-size: 15px;
     color: var(--text-color);
-    flex-wrap: wrap;
+
 }
+
 
 .project-box::after,
 .contact-info::after {
     content: "";
+    background-color: #47ea15;
     position: absolute;
     bottom: -100%;
     background: #8749f2;
@@ -572,15 +586,101 @@ i {
     transition: 0.4s;
     z-index: 0.1;
 
-} */
-
-/*
-.project-box:hover.project-box::after,
-.contact-info:hover.contact-info::after{
-    bottom:0;
 }
-.project-box:hover.project-box .moon-sun:is(#moon, #sun).project-box:hover.project-box >h3,
-.project-box:hover.project-box >label{
+
+
+.project-box:hover.project-box::after,
+.contact-info:hover.contact-info::after {
+    bottom: 0;
+}
+
+
+.project-box:hover.project-box .moon-sun:is(#moon, #sun).project-box:hover.project-box>h3,
+.project-box:hover.project-box>label {
     color: #fff;
     z-index: 2;
+}
+
+.top-header span {
+    color: var(--text-color);
+}
+
+/* contact  */
+.contact-info {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 0;
+    padding: 20px 40px;
+    height: 380px;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    box-shadow: 1px 8px 10px 2px var(--first-shadow);
+    overflow: hidden;
+    cursor: pointer;
+
+}
+
+.contact-info>h2 {
+    color: var(--text-color);
+    margin-bottom: 20px;
+
+}
+
+.contact-info>p {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    color: var(--text-color);
+    margin-block: 5px;
+
+}
+
+.contact-info::after {
+    color: #8749f2;
+}
+
+/* not working */
+
+/* .contact-info:hover.contact-info h2,
+.contact-info:hover.contact-info p,
+.contact-info:hover.contact-info i {
+    color: #fff;
+    z-index: 2;
+    background-color: pink;
+
 } */
+/* contact form  */
+.form-control {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+
+.form-inputs {
+    width: 50%;
+    height: 55px;
+    background: transparent;
+    border: 2px solid #aaa;
+    padding-inline: 20px;
+    border-radius: 10px;
+    outline: none;
+    background-color: #47ea15;
+}
+
+.text-area {
+    width: 100%;
+    height: 250px;
+    background: transparent;
+    border: 2px solid #aaa;
+    padding: 15px 20px;
+    color: var(--text-color);
+    border-radius: 10px;
+    outline: none;
+    resize: none;
+    background-color: #c40101;
+}
