--- a/style.css
+++ b/style.css
@@ -643,44 +643,276 @@ i {
     color: #8749f2;
 }
 
-/* not working */
+/* not working  */
 
-/* .contact-info:hover.contact-info h2,
+.contact-info:hover.contact-info h2,
 .contact-info:hover.contact-info p,
 .contact-info:hover.contact-info i {
     color: #fff;
     z-index: 2;
-    background-color: pink;
 
-} */
+
+}
+
 /* contact form  */
 .form-control {
     display: flex;
     flex-direction: column;
     gap: 10px;
     width: 100%;
+
 }
 
 .form-inputs {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+
+
+
+}
+
+.input-field {
     width: 50%;
     height: 55px;
     background: transparent;
-    border: 2px solid #aaa;
+    border: 2px solid#aaa;
     padding-inline: 20px;
     border-radius: 10px;
     outline: none;
-    background-color: #47ea15;
 }
 
-.text-area {
+.input-subject {
+    width: 100%;
+    height: 55px;
+    background: transparent;
+    border: 2px solid #aaa;
+    border-radius: 10px;
+    padding-inline: 20px;
+    margin-bottom: 10px;
+    outline: none;
+
+}
+
+
+
+.textarea {
     width: 100%;
     height: 250px;
     background: transparent;
     border: 2px solid #aaa;
     padding: 15px 20px;
+    outline: none;
     color: var(--text-color);
     border-radius: 10px;
     outline: none;
     resize: none;
-    background-color: #c40101;
+
+
+}
+
+.form-button>.btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 40%;
+    border: none;
+    background: #8749f2;
+    padding: 10px 20px;
+    border-radius: 30px;
+    color: #fff;
+}
+
+.form-button i {
+    font-size: 18px;
+    rotate: -45deg;
+    margin-left: 10px;
+
+}
+
+/* footer box  */
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 30px;
+    background: var(--body-color);
+    padding-block: 40px 60px;
+
+}
+
+.middle-footer .footer-menu {
+    display: flex;
+
+}
+
+.footer_menu_list {
+    list-style: none;
+}
+
+.footer_menu_list a {
+    text-decoration: none;
+    color: var(--text-color);
+    font-weight: 500;
+    margin-inline: 20px;
+}
+
+.footer_menu_list a:hover {
+    color: #8749f2;
+}
+
+.footer-social-icons {
+    display: flex;
+    gap: 30px;
+    color: var(--color-white);
+}
+
+.bottom-footer {
+    font-size: 14px;
+    margin-top: 10px;
+    color: var(--color-white);
+
+}
+
+/* media query =1024px*/
+
+@media only screen and (max-width:1024px) {
+    .featured-text {
+        padding: 0;
+    }
+
+    .image,
+    .image img {
+        width: 320px;
+        height: 620px;
+    }
+
+}
+
+/* media query =900px*/
+@media only screen and (max-width:1024px) {
+    .nav-menu-btn {
+        display: none;
+    }
+
+    .nav-menu.responsive {
+        left: 0;
+    }
+
+    .nav-menu {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: rgba(250, 250, 250, 0.7);
+        backdrop-filter: blur(5px);
+        width: 300px;
+        border-radius: 0px 30px 0px;
+        min-height: 450px;
+        height: 100vh;
+        transition: 0.3s;
+    }
+
+    .nav_menu_list {
+        flex-direction: column;
+    }
+
+    .nav-menu-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .featured-box {
+        flex-direction: column;
+        justify-content: center;
+        height: 100vh;
+    }
+
+    .featured-text {
+        width: 100%;
+        order: 2;
+        justify-content: center;
+        align-content: flex-start;
+        min-height: 60vh;
+    }
+
+    .social_icons {
+        margin-top: 2em;
+    }
+
+    .featured-image {
+        order: 1;
+        justify-content: center;
+        min-height: 150px;
+        width: 100%;
+        margin-top: 65px;
+
+    }
+
+    .image,
+    .image img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 50px;
+
+    }
+
+    .col {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .about-info,
+    .contact-info {
+        width: 100%;
+    }
+
+    .project-container {
+        justify-content: center;
+
+    }
+
+    .project-box {
+        width: 80%;
+    }
+
+    .mode {
+        display: flex;
+        align-items: center;
+        margin-left: 60%;
+    }
+}
+
+@media only screen and (max-width:540px) {
+    .featured-name {
+        font-size: 40px;
+    }
+
+    .project-box {
+        width: 100%;
+    }
+
+    .form-inputs {
+        flex-direction: column;
+    }
+
+    .input-field {
+        width: 100%;
+    }
+
+    .mode {
+        margin-left: 50%;
+    }
 }
