--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ body.dark #moon {
     position: relative;
     display: flex;
     justify-content: center;
-
+    align-items: flex-start;
     min-height: 100vh;
     flex-direction: column;
     width: 50%;
@@ -193,7 +193,7 @@ body.dark #moon {
 }
 
 .featured-text .hello {
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 500;
     margin-bottom: -20px;
     color: var(--text-color);
@@ -211,7 +211,7 @@ body.dark #moon {
 .typedText {
     font-family: sans-serif;
     color: #8749f2;
-    font-size: 8px;
+    font-size: 50px;
     font-weight: 600;
     text-transform: capitalize;
 }
